# Xtracture

./: .flake8  .pre-commit-config.yaml  LICENCE  README.md  example.py  pyproject.toml
examples/: google_cloud_vision_example.py  lambda_example.py  tesseract_example.py
src/xtracture/: extractor.py  item_extractor.py  logger.py  recognizer.py  schema.py  text_extractor.py
